--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -7,6 +7,7 @@
 @import "facets";
 @import "filter-caption";
 @import "form";
+@import "media";
 @import "owl-carousel";
 @import "pager";
 @import "scrollup";
