--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
@@ -100,6 +100,11 @@ label.checkbox-toggle:hover {
   color: $link-color-hover;
   text-decoration: underline;
 }
+.facet-item:hover {
+  .facets-checkbox {
+    box-shadow: 0 0 1px #0075ff;
+  }
+}
 
 .facets-soft-limit-link {
   display: block;
