NBNP-397 Replace custom facet throbber w/ Ajax Loader > overlay, CSS override

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
@@ -117,3 +117,11 @@ label.checkbox-toggle:hover {
 .item-list__range_slider li {
   list-style-type: none;
 }
+
+.ajax-progress {
+  .ajax-throbber {
+    & > div {
+      background-color: $link-color-hover;
+    }
+  }
+}
