--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -307,14 +307,23 @@
             {% endif %}
           </dl>
         </div>
-        {% if display_report_link %}
-        <div class="report-form">
-          <a class="bg-light border border-secondary btn btn-sm text-dark"
-            href="{{ report_url }}"><span class="fas fa-envelope" aria-hidden="true"></span>
-            Report additional information or errors
-          </a>
+
+        <hr>
+        <div class="d-flex flex-column">
+          {% if display_report_link %}
+          <div class="mb-1 link-report">
+            <a href="{{ report_url }}">
+              Report additional information or errors<span class="fas fa-envelope ml-1" aria-hidden="true"></span>
+            </a>
+          </div>
+          {% endif %}
+          <div class="link-external-terms">
+            <a href="https://lib.unb.ca/archives/policies/terms">
+              Terms of Use for the NBHNP<span class="fas fa-external-link-square-alt ml-1"
+              aria-description="(link leads to external site)"></span>
+            </a>
+          </div>
         </div>
-        {% endif %}
       </section>
 
       <aside class="col-lg-4 mb-4 publication">
