NBNP-406 Increase whitespace between title history links

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -293,6 +293,10 @@ a.btn-add:active {
     list-style-type: disc;
     margin: 1em;
 
+    li {
+      padding-bottom: 0.2rem;
+    }
+
     span {
       margin-left: .25em;
     }
