--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -313,13 +313,13 @@
           {% if display_report_link %}
           <div class="mb-1 link-report">
             <a href="{{ report_url }}">
-              Report additional information or errors<span class="fas fa-envelope ml-1" aria-hidden="true"></span>
+              Report additional information or errors<span class="fas fa-envelope fa-sm ml-1" aria-hidden="true"></span>
             </a>
           </div>
           {% endif %}
           <div class="link-external-terms">
             <a href="https://lib.unb.ca/archives/policies/terms">
-              Terms of Use for the NBHNP<span class="fas fa-external-link-square-alt ml-1"
+              Terms of Use for the NBHNP<span class="fas fa-external-link-alt fa-sm ml-1"
               aria-description="(link leads to external site)"></span>
             </a>
           </div>
