NBNP-406 Use alternate 'report' icon

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -313,7 +313,7 @@
           {% if display_report_link %}
           <div class="mb-1 link-report">
             <a href="{{ report_url }}">
-              Report additional information or errors<span class="fas fa-envelope fa-sm ml-1" aria-hidden="true"></span>
+              Report additional information or errors<span class="fas fa-marker fa-sm ml-1" aria-hidden="true"></span>
             </a>
           </div>
           {% endif %}
