NBNP-426 Add 'project' hyperlink within holdings card

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -537,7 +537,7 @@
                 <abbr title="Provincial Archives of New Brunswick">PANB</abbr> and
                 <abbr title="Council of Archives New Brunswick">CANB</abbr>
                 is currently underway to verify all New Brunswick newspaper holdings.
-                This project, while comprehensive, is not anticipated to be completed until sometime in 2023.
+                <a href="/project">This project</a>, while comprehensive, is not anticipated to be completed until sometime in 2023.
               </p>
             </div>
             {% if archives_link is defined and archives_link is not null %}
