NBNP-410 Style override for page viewer's active pager item

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_pager.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_pager.scss
@@ -23,6 +23,10 @@
     }
   }
 
+  span#active-viewer-page {
+    cursor: default;
+  }
+
   a.page-link {
     &:hover {
       border-style: solid!important;
