--- a/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer.css
+++ b/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer.css
@@ -29,3 +29,8 @@
 #seadragon-viewer .openseadragon-container div[title] {
   cursor: pointer;
 }
+#edit-metadata caption {
+  color: #212529;
+  font-family: "ProximaNovaA-Thin", "Century Gothic", AppleGothic, Arial, sans-serif;
+  font-size: 1.3rem;
+}
