--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_breadcrumb.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_breadcrumb.scss
@@ -14,13 +14,14 @@ ol.breadcrumb {
     width: 1rem;
 
     &:after {
-      font-family: "Font Awesome 5 Free";
       content: "\f015";
-      font-size: 0.85rem;
-      font-weight: 900;
+      font: var(--fa-font-solid);
+      font-size: 80%;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
       position: absolute;
       right: -9999px;
-      top: 0;
+      top: .25rem;
     }
   }
 
