Update CSS Pseudo-element rule - sidebar holding group

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -602,6 +602,7 @@ a.back-link::before {
         font: var(--fa-font-solid);
         font-size: smaller;
         display: inline-block;
+        margin-right: .25rem;
         text-rendering: auto;
         -webkit-font-smoothing: antialiased;
         vertical-align: baseline;
