--- a/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital-serial-issue.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital-serial-issue.html.twig
@@ -12,7 +12,7 @@
         {% if display_report_link %}
         <div class="report-form">
           <a class="bg-light border border-secondary btn btn-sm text-dark"
-             href="{{ report_url }}"><span aria-hidden="true" class="fas fa-envelope"></span>
+             href="{{ report_url }}"><span aria-hidden="true" class="fa-solid fa-envelope"></span>
             Report additional information or errors
           </a>
         </div>
