Update FA6 - override UNB Lib Theme FA5 external class

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -6,6 +6,7 @@
 @import "digital-page-lister";
 @import "facets";
 @import "filter-caption";
+@import "font_awesome";
 @import "form";
 @import "media";
 @import "owl-carousel";
