--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_breadcrumb.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_breadcrumb.scss
@@ -2,12 +2,8 @@
 ol.breadcrumb {
   font-size: 1rem;
 
-  li {
-    height: 1.5rem;
-  }
-
   a[href="https://lib.unb.ca"] {
-    display: inline-block;
+    display: block;
     height: 1rem;
     position: relative;
     right: 9999px;
